# casadi-to-warp

./: README.md  pyproject.toml
casadi_functions/: staccatoe_fk_func.casadi
examples/: staccatoe_motor_map.py
generated_kernels/: armature_kernel.py  fk_kernel.py  jac_kernel.py  state_armature_jac_kernel.py
src/casadi_to_warp/: __init__.py  core.py
