[project]
name = "casadi-to-warp"
version = "0.1.0"
description = "Transpile CasADi SX functions to NVIDIA Warp kernels"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "casadi>=3.7.2",
    "numpy>=2.3.5",
    "warp-lang>=1.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
